Fixed yellow "alleen samen" card on dark mode

--- a/resources/css/elements/card.css
+++ b/resources/css/elements/card.css
@@ -91,4 +91,7 @@
   .card__figure {
     @apply bg-gray-secondary-3;
   }
+  .card__figure--alleen-samen {
+    background-color: #ffb604;
+  }
 }
